# ReconciliationManager

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  SONARQUBE_FIX.md  TESTING_README.md  alembic.ini  buildspec.yml  compose.yaml  coverage.xml  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  serverless.yml  sonar-project.properties  test-results.xml  test_with_path.py
.github/: DATABASE_POLICY.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 065f043a38d5_ensure_date_collumns_nullable.py  133bffe21e3e_correct_invoicehistory_table.py  16c41c73289b_add_manual_migration_for_missing_changes.py  230295b0b722_nova_tabela_documentoanexo_schema_dlm.py  26ed6c4b608d_criação_coluna_idusuariocriacao_na_.py  2da42bdad915_tag_workflow.py  3104252a6bff_add_versao.py  35ac6d00308f_document_table_new_columns.py  3a75621e4066_adding_status_field_on_reconannotation_.py  4899f9cccb83_workflow_palavrachavedocumento_create_.py  50692e5f4bc6_other_flight_tables.py  (+23 more)
env/: pyvenv.cfg
src/: Dockerfile.airlineapi  Dockerfile.amirecanairline  Dockerfile.amirecanairlineapi  Dockerfile.analysedataapi  Dockerfile.documentapi  Dockerfile.flightfile  Dockerfile.getfiles3  Dockerfile.invoicereportsapi  Dockerfile.invoices  Dockerfile.populatereconciliationapi  Dockerfile.pricereport  Dockerfile.read_files_recon  Dockerfile.readfilesfromcateringandairline  Dockerfile.readfilesrecon  Dockerfile.reconannotationapi  Dockerfile.reconciliation  requirements.txt
(+109 files in other folders)
